# ARAC

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  pyproject.toml
.codex/: STRUCTURE.md
HCC_SRC/: HCC-ES.py  arac_hcc_smoke_runner.py
HCC_SRC/AOB/: utils.py
configs/: aob_pilot.yaml  default.yaml
docs/: aob-final-evaluation-protocol.md  boundaries.md  core-method.md  hcc-backbone-extraction.md  hcc-main-historical-results-audit.md  schemas.md
experiments/: README.md  __init__.py
experiments/exp_001_schema_smoke/: README.md  __init__.py  expected_outputs.md  run.py
experiments/exp_002_aob_1run_pilot/: README.md  __init__.py  expected_outputs.md  run.py
experiments/exp_003_hcc_runtime_consumer_smoke/: README.md  __init__.py  expected_outputs.md  run.py
experiments/exp_004_hcc_main_historical_result_recovery/: README.md  __init__.py  run.py  (+1 more)
references/: hcc_main_historical_result_inventory.csv  hcc_main_vs_paper_reported_comparison.csv  paper_reported_table2_hcc_es.csv  source-index.md
scripts/: debug_relation_dispatch.py
tests/: test_aob_pilot_protocol.py  test_debug_relation_dispatch.py  test_exp_001_schema_smoke.py  test_exp_002_aob_1run_pilot.py  test_exp_003_hcc_runtime_consumer_smoke.py  test_exp_004_hcc_main_historical_result_recovery.py  test_hcc_action_execution_plan.py  test_hcc_backbone_adapter.py  test_hcc_evaluation_record_parser.py  test_hcc_execution_adapter.py  test_hcc_optimizer_budget.py  test_hcc_smoke_runner_cli.py  test_overlap_relation_builder.py  test_policy_smoke.py  test_project_metadata.py  test_relation_policy.py
(+18 files in other folders)
