[project]
name = "arac"
version = "0.1.0"
description = "Clean scaffold for reference-blind evidence-to-intervention utility mapping."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
