[project]
name = "arac"
version = "0.1.0"
description = "Clean scaffold for reference-blind evidence-to-intervention utility mapping."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
hcc = [
    "matplotlib>=3.11",
    "numpy>=2.0",
    "PyYAML>=6.0",
    "scipy>=1.18",
    "torch>=2.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that run the HCC subprocess smoke runner",
]

[tool.ruff]
line-length = 100
target-version = "py311"
